--- a/css/styles.css
+++ b/css/styles.css
@@ -24,13 +24,14 @@ html {
   font-size: 20px;
   line-height: 1.1rem;
   position: relative;
-  
+  min-height: 100%;
 }
 
 body {
   margin: 0px;
   padding: 25px;
   position: relative;
+  min-height: 100%;
 }
 
 header {
