--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@
 html {
   text-align: center;
   overflow-y: scroll;
-  background-color: rgb(98.5, 98.5, 98.5);
   color:aliceblue;
   font-family: 'Proggy Small';
   font-weight: bold;
@@ -28,6 +27,7 @@ html {
 }
 
 body {
+  background-color: rgb(98.5, 98.5, 98.5);
   margin: 0px;
   padding: 25px;
   position: relative;
@@ -40,6 +40,9 @@ header {
 
 .content {
   margin: 20px 20%;
+  color:aliceblue;
+  font-family: 'Proggy Small';
+  font-weight: bold;
 }
 
 .introduction {
@@ -47,9 +50,14 @@ header {
 }
 
 footer {
-  padding-bottom: 30px;
+  padding: 30px 0;
   background-color: rgb(42, 42, 42);
   border-top: 5px rgba(10,101,120,255) solid;
+}
+
+.social-icon {
+  font-size: 0.8rem;
+  color: rgba(10,101,120,255);
 }
 
 a {
@@ -59,6 +67,9 @@ a {
 h1,
 h2,
 h3 {
+  font-family: 'Proggy Small';
+  font-weight: bold;
+  color:aliceblue;
   text-shadow: 2px 2px 3px lightgrey;
 }
 
@@ -84,7 +95,7 @@ h3 {
 
 .banner-links {
   margin: 0;
-  padding: 5px;
+  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -229,8 +240,8 @@ video {
   font-size: 24px;
   color: black;
   background: linear-gradient(150deg, darkgrey 41%, white);
-  padding: 5px;
-  margin: 5px;
+  padding: 8px;
+  margin: 8px;
   line-height: 1.8em;
   border-radius: 8px;
   border: 2px rgba(10,101,120,255) solid;
@@ -245,6 +256,35 @@ video {
 
 
 /* AI Office Escape Page */
+
+.game-images-container {
+  min-height: 1000px;
+  padding: 7% 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  row-gap: 30px;
+}
+
+.game-images {
+  min-height: 820px;
+  display: flex;
+  align-items: center;
+}
+
+.game-image {
+  height: 812px;
+  width: 1118px;
+}
+
+.carousel-ctrlbtn-left {
+  margin-left: -150px;
+}
+
+.carousel-ctrlbtn-right {
+  margin-right: -150px;
+}
 
 .characters {
   margin-top: 30px;
