--- a/css/styles.css
+++ b/css/styles.css
@@ -380,6 +380,10 @@ article {
     font-size: 42px;
   }
 
+  .game-images {
+    min-height: 320px;
+  }
+
   .game-image {
     height: auto;
     width: 400px;
@@ -414,6 +418,10 @@ article {
 
   .listgroups a {
     font-size: 32px;
+  }
+
+  .game-images {
+    min-height: 450px;
   }
 
   .game-image {
