--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,9 @@ body {
   margin: 0px;
   padding: 25px;
   position: relative;
-  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -43,6 +45,7 @@ header {
   color:aliceblue;
   font-family: 'Proggy Small';
   font-weight: bold;
+  flex: 1;
 }
 
 .introduction {
