--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ header {
 }
 
 footer {
+  text-align: left;
   padding: 30px 0;
   background-color: rgb(42, 42, 42);
   border-top: 5px rgba(10,101,120,255) solid;
