--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,6 @@ header {
 }
 
 footer {
-  text-align: left;
   padding: 30px 0;
   background-color: rgb(42, 42, 42);
   border-top: 5px rgba(10,101,120,255) solid;
@@ -245,6 +244,10 @@ video {
 .listgroups {
   position: relative;
   display: inline-block;
+}
+
+.listgroups ul {
+  text-align: left;
 }
 
 .listgroups a {
