--- a/css/styles.css
+++ b/css/styles.css
@@ -370,6 +370,10 @@ article {
 
 @media only screen and (max-width: 640px) {
   
+  p {
+    font-size: 22px;
+  }
+
   .content {
     margin: 20px 5%;
     min-height: 600px;
@@ -409,6 +413,10 @@ article {
 /* Tablets */
 
 @media only screen and (min-width: 641px) and (max-width: 1007px) {
+
+  p {
+    font-size: 26px;
+  }
 
   .content {
     margin: 20px 10%;
