--- a/css/styles.css
+++ b/css/styles.css
@@ -370,6 +370,23 @@ video {
 
 /* AI Office Escape Page */
 
+.bug-alert {
+  display: block;
+  margin: 30px auto;
+  font-family: 'Proggy Small';
+  font-size: 24px;
+  color: black;
+  background: linear-gradient(150deg, darkgrey 41%, white);
+  padding: 2px 12px;
+  line-height: 1.8em;
+  border-radius: 8px;
+  border: 2px rgba(10,101,120,255) solid;
+}
+
+.bug-alert:hover {
+  background: linear-gradient(150deg, rgb(71, 142, 169) 41%, rgb(143, 161, 169));
+}
+
 .wave {
   height: 50px;
   width: auto;
